# AutographAPI

./: AutographAPI.h  CMakeLists.txt
include/AutographAPI/: Communicator.h
src/: Communicator.cpp
test/: CMakeLists.txt  main.cpp
